common/ai-cve-explainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weakspotter-ai-cve-explainer
  namespace: weakspotter-common
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: weakspotter-ai-cve-explainer
  template:
    metadata:
      labels:
        app: weakspotter-ai-cve-explainer
    spec:
      containers:
        - name: ai-cve-explainer
          image: ghcr.io/weakspotter/ai-cve-explainer
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weakspotter-ai-cve-explainer-db
  namespace: weakspotter-common
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: weakspotter-ai-cve-explainer-db
  template:
    metadata:
      labels:
        app: weakspotter-ai-cve-explainer-db
    spec:
      containers:
        - name: ai-cve-explainer-db
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
