common/ai-cve-explainer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weakspotter-ai-cve-explainer
  namespace: weakspotter-common
spec:
  selector:
    app: weakspotter-ai-cve-explainer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ai-cve-explainer-db
  namespace: weakspotter-common
spec:
  selector:
    app: weakspotter-ai-cve-explainer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
