common/ai-cve-explainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weakspotter-ai-cve-explainer-ingress
  namespace: weakspotter-common
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - ai-cve.weakspotter.ozeliurs.com
      secretName: weakspotter-ai-cve-tls
  rules:
    - host: ai-cve.weakspotter.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weakspotter-ai-cve-explainer
                port:
                  number: 9000
